--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VIETNAMESE SQUAT COUNT</title>
+    <link rel="icon" href="./squat.png">
+
     <!-- Import TensorFlow.js library -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8.3/dist/teachablemachine-pose.min.js"></script>
-
+    <meta property="og:title" content="VIETNAMESE SQUAT COUNT">
+    <meta property="og:description" content="VIETNAMESE SQUAT COUNT (Alpha)">
+    <meta property="og:image"
+        content="https://firebasestorage.googleapis.com/v0/b/squat-count.appspot.com/o/squating.png?alt=media&token=cead282a-4e57-4423-a943-abd636e98ec3">
+    <meta property="og:url" content="https://squat-count.web.app">
 
 </head>
 
